# electrumd

./: Cargo.toml  Readme.md  build.rs
.github/workflows/: test.yml
sha256/: electrum-4.1.5-SHA256SUM  electrum-4.5.4-SHA256SUM
src/: lib.rs  versions.rs
