[package]
name = "electrumd"
version = "0.1.0"
description = "Utility to run an electrum wallet daemon process, useful in integration testing environment"
license = "MIT"
repository = "https://github.com/shesek/electrumd"
documentation = "https://docs.rs/electrumd/"
edition = "2018"

[dependencies]
jsonrpc = { git = "https://github.com/shesek/rust-jsonrpc", branch = "202201-nonarray" }
tempfile = "3.1"
log = "0.4"
home = "0.5.3"  # use same ver in build-dep
rand = "0.8"

[dev-dependencies]
env_logger = "0.8"

[build-dependencies]
ureq = "1.0"  # allows to keep MSRV 1.41.1
bitcoin_hashes = "0.10"

[features]
"4_1_5" = []
"4_5_4" = []

